--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mineplex-api-wrapper"
   ],
   "dependencies": {
-    "mineplex-api": "^1.0.0"
+    "chalk": "^1.1.3",
+    "mineplex-api": "^1.1.1"
   }
 }
